works with app password

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Starter Pack to Feed Extension</title>
+        <title>Starter Pack to List Extension</title>
         <link rel="stylesheet" type="text/css" href="styles/popup.css" />
     </head>
     <body>
         <div id="app">
-            <h1>Starter Pack to Feed Extension</h1>
+            <h1>Starter Pack to List Extension</h1>
             <p>This is my awesome extension!</p>
         </div>
-        <script src="scripts/popup.js"></script>
     </body>
 </html>
